<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/et_oper1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_oper2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="25sp"
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/btn_add"
            android:text="+"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/btn_minus"
            android:text="-"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:textStyle=""
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/btn_multiplication"
            android:text="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/btn_division"
            android:text="/"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>